# aiogram_project1

./: README.md  alembic.ini  config.py  database.py  main.py  pyproject.toml
alembic/: env.py
middlewares/: db.py
migrations/: env.py
migrations/versions/: 6c2631b44694_initial_migration.py  df0bc75cc6aa_initial_migration.py  e47f006a93e2_initial_migration.py
models/: __init__.py  base.py  category.py  file.py  user.py
routers/: category.py  media.py  start.py
states/: upload.py
