[project]
name = "aiogram-project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
]
